# ProjectsPapers

./: README.md
Homeworks/ComputerVision/: HowToBuild.txt
Homeworks/ComputerVision/lab1/source/: CMakeLists.txt  lab1.cpp
Homeworks/ComputerVision/lab2/source/: CMakeLists.txt  lab2.cpp  lab2.h
Homeworks/ComputerVision/lab3/source/: CMakeLists.txt  Lab3.cpp  filter.cpp  filter.h
Homeworks/ComputerVision/lab4/source/: CMakeLists.txt  canny.cpp  hough_circle.cpp  hough_line.cpp  lab4.cpp
Homeworks/ComputerVision/lab4/source/include/: canny.h  hough_circle.h  hough_line.h
Homeworks/ComputerVision/lab5/: HowToBuild.txt
Homeworks/ComputerVision/lab5/source/: CMakeLists.txt  lab5.cpp  panormaic_utils.h
Homeworks/DeepLearning/HW1/: HW1.ipynb
Homeworks/DeepLearning/HW1/.ipynb_checkpoints/: HW1-checkpoint.ipynb
Homeworks/DeepLearning/HW2/: HW2.ipynb
Homeworks/DeepLearning/HW3/: HW3.ipynb
Homeworks/DeepLearning/HW4/: Hw4.ipynb
Homeworks/DeepLearning/HW5/: HW5.ipynb
Homeworks/DeepLearning/HW6/: HW6.ipynb
Homeworks/MachineLearning/HW1/ML2020_HW1/.ipynb_checkpoints/: Classification_wineData-checkpoint.ipynb  LC_MiroljubMihailovic_2021445-checkpoint.ipynb
Homeworks/MachineLearning/HW2/ML2021_HW2/: NN_MiroljubMihailovic_2021445.ipynb
Homeworks/MachineLearning/HW2/ML2021_HW2/.ipynb_checkpoints/: NN_MiroljubMihailovic_2021445-checkpoint.ipynb  NNs classification and  clustering of clothes images-checkpoint.ipynb  SVM_MiroljubMihailovic_2021445-checkpoint.ipynb  (+1 more)
Homeworks/MachineLearning/HW3/ML2021_HW3/: HW3_MiroljubMihailovic_2021445.ipynb
(+2 files in other folders)
